change z-index to prevent shadow from overlapping

--- a/public/modules/map/map.scss
+++ b/public/modules/map/map.scss
@@ -184,6 +184,8 @@
 	white-space: nowrap;
 	width:280px;
 	position: relative;
+	text-align: center;
+	z-index: 600;
 }
 .toggle-list .title {
 	width:130px;
